# cmdnix

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/cmdnix/: __main__.py  ls.py  main_commands.py  mylog.py
tests/: test_basic.py
