[metadata]
name = cmdnix
description = Linux/Unix command wrapper
author = Alejandro Olivares
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = cmdnix
install_requires = 
    click>=8
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    cmdnix = cmdnix.__main__:cli

[options.extras_require]
testing =
    mypy>=0.961
    pytest>=7.1
    yapf>=0.32

[tool:pytest]
norecursedirs = site-packages

[yapf]
based_on_style = google
spaces_before_comment=15, 20
